# waveshare-rp2040-lcd-0-96-template

./: Cargo.toml  README_hackergarten.md
.cargo/: config.toml
src/: main.rs
