[package]
name = "waveshare-rp2040-lcd-0-96-template"
version = "0.1.0"
edition = "2018"
description = "Board Support Package for the Waveshare RP2040 LCD 0.96 inch"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7", optionl = true }
embedded-graphics = "0.7.1"
panic-halt = "0.2.0"
rp2040-boot2 = { version = "0.3.0", optional = true }
rp2040-hal = { version = "0.9.0" }
waveshare-rp2040-lcd-0-96 = "0.8.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
nb = "1.1.0"
st7735-lcd = { version = "0.8.1", features = ["graphics"] }
